10-rbac/pod-with-sa.yaml
apiVersion: v1
kind: Pod
metadata:
  name: api-pod
spec:
  serviceAccountName: app-service-account
  automountServiceAccountToken: true

  containers:
    - name: app
      image: nginx:alpine
